--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.59.15",
+    "@wagmi/core": "^2.14.1",
+    "ethers": "^5.7.2",
+    "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "viem": "^2.21.32",
+    "wagmi": "^2.12.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
