--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "viem": "^2.21.32",
-    "wagmi": "^2.12.22"
+    "wagmi": "^2.12.22",
+    "web3": "^4.14.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
