--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0",
     "viem": "^2.21.32",
     "wagmi": "^2.12.22",
     "web3": "^4.14.0"
