--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.59.15",
     "@wagmi/core": "^2.14.1",
+    "axios": "^1.7.7",
     "ethers": "^5.7.2",
     "framer-motion": "^11.11.9",
     "react": "^18.3.1",
