--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@tanstack/react-query": "^5.59.15",
     "@wagmi/core": "^2.14.1",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "ethers": "^5.7.2",
+    "express": "^4.21.1",
     "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
